Commented in invalid C code what needs to be done

--- a/CompOrgProj2017/CompOrgProj2017.vcxproj
+++ b/CompOrgProj2017/CompOrgProj2017.vcxproj
@@ -19,7 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main - Students.cpp" />
+    <ClCompile Include="Main - Students.cpp">
+      <RuntimeLibrary Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">MultiThreadedDebug</RuntimeLibrary>
+      <RuntimeLibrary Condition="'$(Configuration)|$(Platform)'=='Release|x64'">MultiThreadedDebug</RuntimeLibrary>
+    </ClCompile>
     <ClCompile Include="SHA-256.cpp" />
   </ItemGroup>
   <ItemGroup>
